# src/controller/stockitem.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from 'express';
-import { InventoryItem } from '../models/stockitem';
+import { InventoryItem, Shipment } from '../models/stockitem';
 import StockItem from '../models/stockitem';
+import ShipmentItem from '../models/shipment';
 //const { StockItem, InventoryItem } = require('../models/stockitem');
 
 export default class InventoryController {
@@ -15,13 +16,7 @@ export default class InventoryController {
                 totalcost,
                 shipments,
             } = req.body as InventoryItem;
-            /* {
-                productId: string;
-                productname: string;
-                totalquantity: number;
-                totalcost: number;
-                shipments?: InventoryItem['shipments'];
-            };*/
+
 
             // Validate the input
             if (!productId || !productname || !totalquantity || !totalcost) {
@@ -70,7 +65,7 @@ export default class InventoryController {
                 }, 0)
                 const totalcost = product.shipments.reduce((total, shipment) => {
                     return total + shipment.totalcost
-                },0)
+                }, 0)
                 return {
                     productID: product.productId,
                     productname: product.productname,
@@ -84,9 +79,86 @@ export default class InventoryController {
         }
     }
 
-    public async addShipment(req:Request,res:Response):Promise<void>{
-        //#swagger.tags=['Stock']
+    public async addShipment(req: Request, res: Response): Promise<void> {
+        //#swagger.tags=['Shipments']
+        try {
+            const productId = req.query.productid;
+
+            let product = await StockItem.findOne({ productId: productId });
+            const {
+                productname,
+                productdescription,
+                quantityreceived,
+                cost,
+                totalcost,
+                datereceived
+            } = req.body as Shipment;
+
+            if (!product) {
+                res.status(401).json({ message: 'No product found' })
+            }
+
+            const newShipment: Shipment = {
+
+                productname,
+                productdescription,
+                quantityreceived,
+                cost,
+                totalcost,
+                datereceived,
+            };
+
+            //add to the shipment collection
+            const shipmentadd = {
+                productid: productId,
+                productname: req.body.productname,
+                productdescription: req.body.productdescription,
+                quantityreceived: req.body.quantityreceived,
+                cost: req.body.cost,
+                totalcost: cost * quantityreceived,
+                datereceived: req.body.datereceived
+            }
+            const result = await new ShipmentItem(shipmentadd)
+            result.save();
+            // add to stock collection
+            product.shipments.push(newShipment)
+            const response = await product.save()
+            res.status(200).json({
+                messege: 'Shipment added ',
+                response: response
+            })
+
+        } catch (message) {
+            res.status(500).json({ message: "No product found" })
+        }
     }
+
+    public async getAllShipments(req: Request, res: Response): Promise<void> {
+        //#swagger.tags=['Shipments']
+        try {
+
+            const productid = req.query.productid;
+
+            const result = await ShipmentItem.find({ productid: productid })
+            console.log(result)
+            res.status(200).json(result)
+
+
+        } catch (message) {
+            res.status(500).json({ message: 'Internal Server Error' })
+        }
+    }
+
+    /*
+    public async deleteShipment(req:Request,res:Response):Promise<void>{
+        try{
+            const productid = req.query.productid;
+            const result = await st
+        }catch(message){
+            res.status(500).json({message:'Internal Server Error'})
+        }
+    }
+*/
 }
 
 
