# src/models/shipment.ts
@@ -1,0 +1,30 @@
+import mongoose, { Document, Model, Schema } from 'mongoose';
+
+
+
+export interface Shipment {
+    productid: string,
+    productname: string;
+    productdescription: string;
+    quantityreceived: number;
+    cost: number;
+    totalcost: number;
+    datereceived: Date;
+}
+
+
+const shipmentSchema = new mongoose.Schema<Shipment>({
+    productid: String,
+    productname: String,
+    productdescription: String,
+    quantityreceived: Number,
+    cost: Number,
+    totalcost: Number,
+    datereceived: Date,
+});
+
+
+
+const ShipmentItem: Model<Shipment> = mongoose.model('Shipment', shipmentSchema, 'shipments');
+
+export default ShipmentItem;
